--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,6 @@
     <maven.build.timestamp.format>dd/MM/yyyy-HH:mm:ss</maven.build.timestamp.format>
 
     <!--<kotlin.version>1.0.3</kotlin.version>-->
-    <commons.cli.version>1.3.1</commons.cli.version>
     <thymeleaf.version>3.0.2.RELEASE</thymeleaf.version>
 
     <javafx-maven-plugin.version>8.7.0</javafx-maven-plugin.version>
@@ -38,12 +37,6 @@
     <commons-beanutils.version>1.9.3</commons-beanutils.version>
     <commons-cli.version>1.3.1</commons-cli.version>
 
-    <mysql.connector.version>5.1.39</mysql.connector.version>
-    <mariadb.connector.version>1.4.5</mariadb.connector.version>
-    <postgresql.connector.version>9.4-1208-jdbc41</postgresql.connector.version>
-    <postgresql-ng.connector.version>0.6</postgresql-ng.connector.version>
-    <oracle.ojdbc.name>ojdbc7</oracle.ojdbc.name>
-    <oracle.connector.version>12.1.0.2</oracle.connector.version>
     <!--<svnkit.version>1.8.14</svnkit.version>-->
     <metadata-extractor.version>2.9.1</metadata-extractor.version>
   </properties>
@@ -95,6 +88,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <source>${jdk.version}</source>
           <target>${jdk.version}</target>
@@ -252,33 +246,6 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- jdbc drivers-->
-    <!-- database drivers, put them all (mysql/mariadb/oracle/postgreSQL) ! -->
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>${mysql.connector.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.oracle</groupId>
-      <artifactId>${oracle.ojdbc.name}</artifactId>
-      <version>${oracle.connector.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.oracle</groupId>
-      <artifactId>orai18n</artifactId>
-      <version>${oracle.connector.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>${postgresql.connector.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-
   </dependencies>
 
   <profiles>
@@ -388,7 +355,7 @@
               <!--<skipNativeLauncherWorkaround124>true</skipNativeLauncherWorkaround124>-->
               <jvmArgs>
                 <jvmArg>-Xmx512M</jvmArg>
-                <jvmArgs>-Dfile.encoding=UTF8</jvmArgs>
+                <!--<jvmArgs>-Dfile.encoding=UTF8</jvmArgs>-->
               </jvmArgs>
               <bundleArguments>
                 <installdirChooser>true</installdirChooser>
