--- a/pom.xml
+++ b/pom.xml
@@ -11,42 +11,49 @@
   </organization>
 
   <properties>
-    <lombok.version>1.16.12</lombok.version>
-    <controlsfx.version>8.40.12</controlsfx.version>
-    <springframework.version>4.3.5.RELEASE</springframework.version>
-    <spring.security.version>4.2.0.RELEASE</spring.security.version>
-    <slf4j.version>1.7.22</slf4j.version>
-    <logback.version>1.2.1</logback.version>
-    <janino.version>2.7.8</janino.version>
+    <lombok.version>1.16.18</lombok.version>
+    <controlsfx.version>8.40.13</controlsfx.version>
+    <springframework.version>4.3.10.RELEASE</springframework.version>
+    <spring.security.version>4.2.3.RELEASE</spring.security.version>
+    <slf4j.version>1.7.25</slf4j.version>
+    <logback.version>1.2.3</logback.version>
+    <janino.version>3.0.7</janino.version>
 
     <!-- maven compiler plugin is define into parent -->
     <jdk.version>1.8</jdk.version>
-    <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
+    <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>dd/MM/yyyy-HH:mm:ss</maven.build.timestamp.format>
-    <maven.findbugs.plugin.version>3.0.1</maven.findbugs.plugin.version>
+    <maven.findbugs.plugin.version>3.0.5-SNAPSHOT</maven.findbugs.plugin.version>
     <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
     <maven.reports.plugin.version>2.9</maven.reports.plugin.version>
     <maven.javadoc.plugin.version>2.10.4</maven.javadoc.plugin.version>
 
     <!--<kotlin.version>1.0.3</kotlin.version>-->
-    <thymeleaf.version>3.0.2.RELEASE</thymeleaf.version>
+    <thymeleaf.version>3.0.7.RELEASE</thymeleaf.version>
 
-    <javafx-maven-plugin.version>8.7.0</javafx-maven-plugin.version>
+    <javafx-maven-plugin.version>8.8.3</javafx-maven-plugin.version>
     <jre.runtime.path>C:\Program Files\Java\jre1.8.0_111</jre.runtime.path>
 
-    <commons-lang3.version>3.5</commons-lang3.version>
-    <commons-configuration2.version>2.1</commons-configuration2.version>
+    <commons-lang3.version>3.6</commons-lang3.version>
+    <commons-configuration2.version>2.1.1</commons-configuration2.version>
     <commons-io.version>2.5</commons-io.version>
     <commons-beanutils.version>1.9.3</commons-beanutils.version>
-    <commons-cli.version>1.3.1</commons-cli.version>
+    <commons-cli.version>1.4</commons-cli.version>
 
     <!--<svnkit.version>1.8.14</svnkit.version>-->
-    <metadata-extractor.version>2.9.1</metadata-extractor.version>
+    <metadata-extractor.version>2.10.1</metadata-extractor.version>
 
   </properties>
 
   <build>
+    <extensions>
+      <extension>
+        <groupId>com.digitech.commons</groupId>
+        <artifactId>build-tools</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </extension>
+    </extensions>
     <pluginManagement>
       <plugins>
         <!-- findbugs -->
@@ -65,7 +72,7 @@
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
               <artifactId>checkstyle</artifactId>
-              <version>7.5.1</version>
+              <version>8.0</version>
             </dependency>
             <dependency>
               <groupId>org.slf4j</groupId>
@@ -373,9 +380,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <highlight.engine>highlightjs</highlight.engine>
 
-        <asciidoctor.maven.plugin.version>1.5.3</asciidoctor.maven.plugin.version>
-        <asciidocj.pdf.version>1.5.0-alpha.11</asciidocj.pdf.version>
-        <jruby.version>9.1.4.0</jruby.version>
+        <asciidoctor.maven.plugin.version>1.5.5</asciidoctor.maven.plugin.version>
+        <asciidocj.pdf.version>1.5.0-alpha.15</asciidocj.pdf.version>
+        <jruby.version>9.1.12.0</jruby.version>
       </properties>
 
       <build>
